<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_reporte"
        android:icon="@drawable/ic_view_module_black"
        android:title="@string/reporte" />

    <item android:title="@string/gestion">
        <menu>
            <item
                android:id="@+id/nav_familia"
                android:icon="@drawable/ic_edit_black"
                android:title="@string/familia" />
            <item
                android:id="@+id/nav_categoria"
                android:icon="@drawable/ic_edit_black"
                android:title="@string/categoria" />
            <item
                android:id="@+id/nav_producto"
                android:icon="@drawable/ic_edit_black"
                android:title="@string/producto" />
        </menu>
    </item>

</menu>
