<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.macochave.tupperinventario.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:id="@+id/layoutFamilia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="144dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFamilia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_add_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/familia"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="144dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_add_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/categoria"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="96dp"
        android:layout_marginTop="144dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_add_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/color"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="144dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_add_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/producto"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="144dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_add_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nuevo"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white" />

</android.support.design.widget.CoordinatorLayout>
